[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "macros"] }
serde = { version = "1", features = ["derive"] }
bcrypt = "0.14.0"
dotenvy = "0.15.7"
validator = { version = "0.16.0", features = ["derive"] }