[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "macros"] }
serde = { version = "1", features = ["derive"] }
bcrypt = "0.14.0"
dotenvy = "0.15.7"
validator = { version = "0.16.0", features = ["derive"] }
opentelemetry = { version = "0.17", features = ["rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio-current-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-opentelemetry = { version = "0.17" }
tracing-bunyan-formatter = "0.3.7"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-actix-web = "0.7"
jsonwebtoken = "8"
derive_more = "0.99.17"
lettre = "0.10.4"